feat: Enhance agenda screen with detailed monthly view and actions

--- a/locales/en.json
+++ b/locales/en.json
@@ -285,7 +285,17 @@
     "fillTitle": "Enter a title",
     "selectMember": "Select at least one family member",
     "deleteConfirm": "Delete?",
-    "deleteMessage": "Are you sure you want to delete \"{{title}}\"?",
+    "deleteMessage": "Are you sure you want to delete this appointment?",
+    "deleteRecurringOptions": "This appointment repeats. What do you want to delete?",
+    "deleteOnlyThis": "Only this appointment",
+    "deleteEntireSeries": "Delete entire series",
+    "confirmDeleteSingle": "Are you sure?",
+    "confirmDeleteSingleMessage": "Are you sure you want to delete only this appointment?",
+    "confirmDeleteSeries": "Delete entire series?",
+    "confirmDeleteSeriesMessage": "Are you sure you want to delete the entire series of recurring appointments?",
+    "seriesDeleted": "Series deleted",
+    "repeats": "Repeats",
+    "deleteOptions": "Delete options",
     "close": "Close",
     "months": {
       "january": "January",
