--- a/locales/nl.json
+++ b/locales/nl.json
@@ -285,7 +285,17 @@
     "fillTitle": "Vul een titel in",
     "selectMember": "Selecteer minimaal één gezinslid",
     "deleteConfirm": "Verwijderen?",
-    "deleteMessage": "Weet je zeker dat je \"{{title}}\" wilt verwijderen?",
+    "deleteMessage": "Weet je zeker dat je deze afspraak wilt verwijderen?",
+    "deleteRecurringOptions": "Deze afspraak herhaalt zich. Wat wil je verwijderen?",
+    "deleteOnlyThis": "Alleen deze afspraak",
+    "deleteEntireSeries": "Hele reeks verwijderen",
+    "confirmDeleteSingle": "Weet je het zeker?",
+    "confirmDeleteSingleMessage": "Weet je zeker dat je alleen deze afspraak wilt verwijderen?",
+    "confirmDeleteSeries": "Hele reeks verwijderen?",
+    "confirmDeleteSeriesMessage": "Weet je zeker dat je de hele reeks herhalende afspraken wilt verwijderen?",
+    "seriesDeleted": "Reeks verwijderd",
+    "repeats": "Herhaalt",
+    "deleteOptions": "Verwijder opties",
     "close": "Sluiten",
     "months": {
       "january": "Januari",
