feat: Add auth translations to remaining language files

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -73,6 +73,67 @@
     "logoutConfirm": "هل أنت متأكد من أنك تريد تسجيل الخروج؟",
     "logoutError": "حدث خطأ أثناء تسجيل الخروج"
   },
+  "auth": {
+    "login": {
+      "title": "تسجيل الدخول",
+      "subtitle": "مرحباً بعودتك!",
+      "withEmail": "تسجيل الدخول بالبريد الإلكتروني",
+      "withApple": "المتابعة مع Apple",
+      "withGoogle": "المتابعة مع Google",
+      "emailPlaceholder": "you@email.com",
+      "passwordPlaceholder": "كلمة المرور الخاصة بك",
+      "fillEmail": "أدخل عنوان بريدك الإلكتروني",
+      "fillPassword": "أدخل كلمة المرور الخاصة بك",
+      "fillDetails": "املأ بياناتك",
+      "noFamilyFound": "لم يتم العثور على عائلة",
+      "noFamilyMessage": "لم تتم إضافتك إلى عائلة بعد. اطلب من أحد أفراد العائلة دعوتك أو ابدأ عائلة جديدة.",
+      "appleNotAvailable": "غير متاح",
+      "appleOnlyIOS": "تسجيل الدخول بـ Apple متاح فقط على iOS"
+    },
+    "verifyEmail": {
+      "title": "تحقق من بريدك الإلكتروني",
+      "subtitle": "لقد أرسلنا رمز تحقق مكون من 6 أرقام إلى",
+      "verify": "تحقق",
+      "noCodeReceived": "لم تستلم رمزاً؟",
+      "resendCode": "إعادة إرسال الرمز",
+      "sending": "جاري الإرسال...",
+      "codeSent": "تم الإرسال!",
+      "codeSentMessage": "لقد أرسلنا رمز تحقق جديد إلى بريدك الإلكتروني.",
+      "invalidCode": "رمز التحقق غير صالح. يرجى المحاولة مرة أخرى.",
+      "fillCompleteCode": "أدخل الرمز المكون من 6 أرقام بالكامل"
+    },
+    "createFamily": {
+      "title": "بدء عائلة جديدة",
+      "subtitle": "اختر كيف تريد تسجيل الدخول",
+      "registerWithEmail": "التسجيل بالبريد الإلكتروني",
+      "fillDetails": "املأ بياناتك للبدء",
+      "namePlaceholder": "اسمك",
+      "passwordMinLength": "يجب أن تتكون كلمة المرور من 6 أحرف على الأقل",
+      "createFamily": "إنشاء عائلة",
+      "familyCreated": "تم إنشاء العائلة! 🎉",
+      "familyCodeMessage": "رمز عائلتك هو: {{code}}\n\nشارك هذا الرمز مع شريكك حتى يتمكن من الانضمام."
+    },
+    "joinFamily": {
+      "title": "الانضمام إلى العائلة",
+      "subtitle": "أدخل رمز العائلة واسمك",
+      "familyCodePlaceholder": "ABCDEF",
+      "namePlaceholder": "اسمك",
+      "continue": "متابعة",
+      "invalidCode": "عذراً، هذا الرمز غير صحيح.",
+      "registerWithEmail": "التسجيل بالبريد الإلكتروني",
+      "createNewAccount": "إنشاء حساب جديد",
+      "loginWithEmail": "تسجيل الدخول بالبريد الإلكتروني",
+      "loginExistingAccount": "تسجيل الدخول بحسابك الحالي",
+      "haveAccount": "هل لديك حساب بالفعل؟ تسجيل الدخول",
+      "noAccount": "ليس لديك حساب؟ التسجيل",
+      "welcome": "مرحباً! 🎉",
+      "welcomeMessage": "تمت إضافتك بنجاح إلى العائلة.",
+      "addingToFamily": "جاري إضافتك إلى العائلة..."
+    },
+    "setupFamily": {
+      "creatingFamily": "جاري إنشاء عائلتك..."
+    }
+  },
   "language": {
     "title": "اللغة",
     "subtitle": "اختر لغتك",
