--- a/locales/hi.json
+++ b/locales/hi.json
@@ -73,6 +73,67 @@
     "logoutConfirm": "क्या आप वाकई लॉग आउट करना चाहते हैं?",
     "logoutError": "लॉग आउट करते समय कुछ गलत हो गया"
   },
+  "auth": {
+    "login": {
+      "title": "लॉग इन करें",
+      "subtitle": "वापस स्वागत है!",
+      "withEmail": "ईमेल से लॉग इन करें",
+      "withApple": "Apple के साथ जारी रखें",
+      "withGoogle": "Google के साथ जारी रखें",
+      "emailPlaceholder": "you@email.com",
+      "passwordPlaceholder": "आपका पासवर्ड",
+      "fillEmail": "अपना ईमेल पता दर्ज करें",
+      "fillPassword": "अपना पासवर्ड दर्ज करें",
+      "fillDetails": "अपना विवरण भरें",
+      "noFamilyFound": "कोई परिवार नहीं मिला",
+      "noFamilyMessage": "आपको अभी तक किसी परिवार में नहीं जोड़ा गया है। परिवार के सदस्य से आपको आमंत्रित करने के लिए कहें या नया परिवार शुरू करें।",
+      "appleNotAvailable": "उपलब्ध नहीं",
+      "appleOnlyIOS": "Apple Sign-In केवल iOS पर उपलब्ध है"
+    },
+    "verifyEmail": {
+      "title": "अपना ईमेल सत्यापित करें",
+      "subtitle": "हमने 6 अंकों का सत्यापन कोड भेजा है",
+      "verify": "सत्यापित करें",
+      "noCodeReceived": "कोड प्राप्त नहीं हुआ?",
+      "resendCode": "कोड फिर से भेजें",
+      "sending": "भेजा जा रहा है...",
+      "codeSent": "भेज दिया गया!",
+      "codeSentMessage": "हमने आपके ईमेल पर एक नया सत्यापन कोड भेजा है।",
+      "invalidCode": "अमान्य सत्यापन कोड। कृपया पुनः प्रयास करें।",
+      "fillCompleteCode": "पूर्ण 6 अंकों का कोड दर्ज करें"
+    },
+    "createFamily": {
+      "title": "नया परिवार शुरू करें",
+      "subtitle": "चुनें कि आप कैसे लॉग इन करना चाहते हैं",
+      "registerWithEmail": "ईमेल से पंजीकरण करें",
+      "fillDetails": "शुरू करने के लिए अपना विवरण भरें",
+      "namePlaceholder": "आपका नाम",
+      "passwordMinLength": "पासवर्ड कम से कम 6 वर्णों का होना चाहिए",
+      "createFamily": "परिवार बनाएं",
+      "familyCreated": "परिवार बनाया गया! 🎉",
+      "familyCodeMessage": "आपका परिवार कोड है: {{code}}\n\nइस कोड को अपने साथी के साथ साझा करें ताकि वे शामिल हो सकें।"
+    },
+    "joinFamily": {
+      "title": "परिवार में शामिल हों",
+      "subtitle": "परिवार कोड और अपना नाम दर्ज करें",
+      "familyCodePlaceholder": "ABCDEF",
+      "namePlaceholder": "आपका नाम",
+      "continue": "जारी रखें",
+      "invalidCode": "क्षमा करें, यह कोड गलत है।",
+      "registerWithEmail": "ईमेल से पंजीकरण करें",
+      "createNewAccount": "नया खाता बनाएं",
+      "loginWithEmail": "ईमेल से लॉग इन करें",
+      "loginExistingAccount": "अपने मौजूदा खाते से लॉग इन करें",
+      "haveAccount": "पहले से खाता है? लॉग इन करें",
+      "noAccount": "खाता नहीं है? पंजीकरण करें",
+      "welcome": "स्वागत है! 🎉",
+      "welcomeMessage": "आपको सफलतापूर्वक परिवार में जोड़ा गया है।",
+      "addingToFamily": "आपको परिवार में जोड़ा जा रहा है..."
+    },
+    "setupFamily": {
+      "creatingFamily": "आपका परिवार बनाया जा रहा है..."
+    }
+  },
   "language": {
     "title": "भाषा",
     "subtitle": "अपनी भाषा चुनें",
